--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
-  "editor.tabSize": 3,
   "[python]": {
-    "editor.defaultFormatter": "ms-python.autopep8"
-  },
-  "python.formatting.provider": "none"
+    "editor.insertSpaces": true,
+    "editor.tabSize": 3,
+    "editor.defaultFormatter": "ms-python.black-formatter"
+},
+"python.formatting.provider": "none",
 }
